examples/error/assignment_from_void.rx
function void main() {
  string str = print("str"); 
}